Adding SSL certification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,11 @@ spring.datasource.password = admin
 spring.datasource.initialization-mode=always
 spring.http.auth-token-header-name=X-API-KEY
 spring.http.auth-token=houstonWeHaveAProblem
-server.port=50800
+server.port=8443
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
+
+security.require-ssl=true
