--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-service.version=1.0.0
+build.version=1.0.0
 spring.jpa.database-platform=com.billing.setu.configuration.SqlDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url = jdbc:sqlite:setu.db
