--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,9 @@ spring.datasource.initialization-mode=always
 spring.http.auth-token-header-name=X-API-KEY
 spring.http.auth-token=houstonWeHaveAProblem
 server.port=8345
-
+# Enable to test on local
 #server.ssl.key-store-type=PKCS12
 #server.ssl.key-store=classpath:keystore.p12
 #server.ssl.key-store-password=password
 #server.ssl.key-alias=tomcat
-
 #security.require-ssl=false
